--- a/src/app/modules/dashboard/modules/categories/components/add-category-modal/add-category-modal.component.html
+++ b/src/app/modules/dashboard/modules/categories/components/add-category-modal/add-category-modal.component.html
@@ -32,7 +32,7 @@
     [colorScheme]="'charcoal'"
     [text]="'dashboard.addCategoryModal.addCategory' | translate"
     [buttonSizeX]="'big'"
-    [disabled]="!isFormValid"
+    [disabled]="this.form?.invalid"
     [loading]="loading$ | async"
     (click)="submitClick()"
   ></app-button>
