--- a/src/app/modules/dashboard/modules/info-cards/components/account-value-edit-modal/account-value-edit-modal.component.html
+++ b/src/app/modules/dashboard/modules/info-cards/components/account-value-edit-modal/account-value-edit-modal.component.html
@@ -6,6 +6,7 @@
 >
   <form class="flex flex-col gap-y-2" [formGroup]="form">
     <custom-input
+      [id]="formFields.Value"
       [label]="'dashboard.accountValueEditModal.valueInputLabel' | translate"
       [formControlName]="formFields.Value"
       [isRequired]="true"
@@ -16,6 +17,7 @@
     ></custom-input>
 
     <custom-textarea
+      [id]="formFields.Note"
       [label]="'dashboard.accountValueEditModal.noteInputLabel' | translate"
       [formControlName]="formFields.Note"
       [maxLength]="100"
