--- a/src/app/modules/design-system/components/form-controls/custom-input/custom-input.component.html
+++ b/src/app/modules/design-system/components/form-controls/custom-input/custom-input.component.html
@@ -10,7 +10,7 @@
   [id]="id"
   [autocomplete]="'off'"
   [type]="type"
-  [appPreventInvalidChars]="type === 'number' ? ['e', 'E', '-', '.'] : []"
+  [preventInvalidChars]="type === 'number' ? ['e', 'E', '-', '.'] : []"
   [formControl]="formControl"
   [maxlength]="maxLength"
   (ngModelChange)="valueChanged($event)"
