--- a/src/app/modules/dashboard/components/currency-switcher/currency-switcher.component.html
+++ b/src/app/modules/dashboard/components/currency-switcher/currency-switcher.component.html
@@ -1,6 +1,6 @@
 <app-menu
   customTooltip
-  [tooltipText]="buildTranslationKey('tooltip') | translate"
+  [tooltipText]="'currencySwitcher.tooltip' | translate"
   [position]="['left']"
   [dontDisplayOnScreenWidth]="true"
   [menuActions]="menuActions"
