--- a/src/app/modules/dashboard/modules/activity-log/components/category-value-change-record/category-value-change-record.component.html
+++ b/src/app/modules/dashboard/modules/activity-log/components/category-value-change-record/category-value-change-record.component.html
@@ -5,24 +5,29 @@
   [loading]="isRecordRemoving$ | async"
   (remove)="removeHandler()"
 >
-  <span class="flex justify-between">
-    <div class="flex flex-col">
+  <span class="flex justify-between items-center gap-x-2">
+    <div class="flex flex-col overflow-hidden">
       <span class="font-main text-charcoal text-base">
-        {{ record.categoryName }}
+        {{ record.category.name }}
       </span>
 
-      <span class="font-main font-bold text-blue text-xs">
-        {{ record.accountName }}
+      <span class="block truncate flex-1 font-main font-bold text-blue text-xs">
+        ({{ record.account.currency.symbol }}) {{ record.account.name }}
       </span>
     </div>
 
-    @switch (record.budgetType) {
-      @case (budgetType.Income) {
-        <span class="font-main font-bold text-dark-green">&plus;&nbsp;{{ record.value | currencySymbol }}</span>
+    <span class="flex flex-col items-end font-main font-bold w-auto min-w-fit {{ colorClass }}">
+      @if (isDoubleValue) {
+        <span>{{ symbol }}{{ record.value }}{{ record.account.currency.symbol }}</span>
+      } @else {
+        <span class="text-base font-normal">
+          {{ symbol }}{{ record.convertedValue | currencySymbol }}
+        </span>
+
+        <span class="text-xs font-bold">
+          {{ symbol }}{{ record.value }}&nbsp;{{ record.account.currency.symbol }}
+        </span>
       }
-      @case (budgetType.Expense) {
-        <span class="font-main font-bold text-red">&minus;&nbsp;{{ record.value | currencySymbol }}</span>
-      }
-    }
+    </span>
   </span>
 </app-generic-activity-log-record>
