account and category value correct calc

--- a/src/app/modules/dashboard/modules/categories/components/category-value-modal/category-value-modal.component.html
+++ b/src/app/modules/dashboard/modules/categories/components/category-value-modal/category-value-modal.component.html
@@ -23,7 +23,8 @@
       [minValue]="1"
       [type]="'number'"
       [formControlName]="formFieldsEnum.ValueToAdd"
-      [isDisabled]="shouldDisableValueFields"
+      [isDisabled]="!accoundChoosed"
+      [prefix]="currencySymbolForValueField"
     ></custom-input>
 
     <custom-input
@@ -34,6 +35,7 @@
       [minValue]="1"
       [type]="'number'"
       [formControlName]="formFieldsEnum.ConvertedValueToAdd"
+      [prefix]="currencySymbolForConvertedValueField"
     ></custom-input>
 
     <custom-textarea
