--- a/src/app/modules/design-system/components/form-controls/custom-input/custom-input.component.html
+++ b/src/app/modules/design-system/components/form-controls/custom-input/custom-input.component.html
@@ -2,19 +2,28 @@
   <control-label class="mb-1" [label]="label" [required]="isRequired" [for]="id"></control-label>
 }
 
-<input
-  class="form-control"
-  [ngClass]="{
-    'form-control-error': formControl.invalid && isErrorState()
-  }"
-  [id]="id"
-  [autocomplete]="'off'"
-  [type]="type"
-  [preventInvalidChars]="type === 'number' ? ['e', 'E', '-', '.'] : []"
-  [formControl]="formControl"
-  [maxlength]="maxLength"
-  (ngModelChange)="valueChanged($event)"
-/>
+<div class="w-full relative">
+  @if (prefix) {
+    <span class="absolute top-1/2 left-4 text-lg text-charcoal -translate-y-1/2 font-bold">
+      {{ prefix }}
+    </span>
+  }
+
+  <input
+    class="form-control"
+    [ngClass]="{
+      'form-control-error': formControl.invalid && isErrorState(),
+      'pl-10': prefix
+    }"
+    [id]="id"
+    [autocomplete]="'off'"
+    [type]="type"
+    [preventInvalidChars]="type === 'number' ? ['e', 'E', '-', '.'] : []"
+    [formControl]="formControl"
+    [maxlength]="maxLength"
+    (ngModelChange)="valueChanged($event)"
+  />
+</div>
 
 @if (!isErrorState() && displayCharCounter && maxLength) {
   <char-counter
