--- a/src/app/modules/dashboard/modules/info-cards/components/info-cards/accounts-info-card/accounts-info-card.component.html
+++ b/src/app/modules/dashboard/modules/info-cards/components/info-cards/accounts-info-card/accounts-info-card.component.html
@@ -10,7 +10,10 @@
     [iconName]="'creditcard-folder'"
     [iconColorClass]="'text-dark-green'"
     [colorScheme]="'dark-green'"
-    [primaryText]="buildTranslationKey(accountsAmount ? 'titleWithAmount' : 'title') | translate: { accountsAmount }"
+    [primaryText]="
+      buildTranslationKey(accountsAmount ? 'titleWithAmount' : 'title')
+        | translate: { accountsAmount }
+    "
   >
   </app-info-card>
 
@@ -22,12 +25,21 @@
     </span>
   }
 
-  <app-button
-    class="absolute top-2 right-2"
-    [iconName]="'plus'"
-    [colorScheme]="'transparent-light'"
-    [buttonSizeX]="'small'"
-    [buttonSizeY]="'small'"
-    (click)="openAddAccountModalService(); $event.stopPropagation()"
-  ></app-button>
+  <div class="absolute top-2 right-2 flex gap-x-2">
+    <app-button
+      [iconName]="'plus'"
+      [colorScheme]="'transparent-light'"
+      [buttonSizeX]="'small'"
+      [buttonSizeY]="'small'"
+      (click)="openAddAccountModal(); $event.stopPropagation()"
+    ></app-button>
+
+    <app-button
+      [iconName]="'money-change'"
+      [colorScheme]="'transparent-light'"
+      [buttonSizeX]="'small'"
+      [buttonSizeY]="'small'"
+      (click)="openMoneyMovementModal(); $event.stopPropagation()"
+    ></app-button>
+  </div>
 </div>
