--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,188 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
-@tailwind base;
-@tailwind utilities;
-
-/* inter-regular - cyrillic-ext_latin-ext */
-@font-face {
-  font-display: swap;
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 400;
-  src: url('./assets/fonts/inter-v13-cyrillic-ext_latin-ext-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-}
-/* inter-700 - cyrillic-ext_latin-ext */
-@font-face {
-  font-display: swap;
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 700;
-  src: url('./assets/fonts/inter-v13-cyrillic-ext_latin-ext-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-}
-
-* {
-  -webkit-tap-highlight-color: transparent;
-}
-
-html,
-body {
-  @apply h-full w-full min-h-full;
-}
-
-body {
-  @apply m-0 bg-dirty-white;
-  font-family: 'Inter', sans-serif;
-}
-
-// SCROLLBAR
-::-webkit-scrollbar {
-  @apply w-1.5;
-}
-
-::-webkit-scrollbar-thumb {
-  @apply bg-hover-black border border-solid border-transparent rounded-full bg-clip-padding;
-}
-
-// FORM CONTROL
-custom-input,
-custom-textarea,
-custom-select,
-color-picker {
-  @apply flex flex-col;
-
-  &.disabled {
-    @apply pointer-events-none;
-
-    * {
-      @apply pointer-events-none #{!important};
-    }
-
-    control-label label {
-      @apply text-grey #{!important};
-
-      & * {
-        @apply text-grey #{!important};
-      }
-    }
-  }
-}
-
-.form-control {
-  @apply font-main text-base text-charcoal;
-  @apply border-2 border-solid border-black-transparent rounded-md group-hover:border-charcoal;
-}
-
-.form-control-error {
-  @apply border-red group-hover:border-red rounded-b-none;
-}
-
-input,
-.custom-select,
-.color-picker {
-  @apply h-12;
-}
-
-input,
-textarea,
-.custom-select,
-.color-picker {
-  @apply w-full;
-}
-
-input,
-textarea,
-.custom-select {
-  @apply px-3;
-}
-
-input,
-textarea {
-  @apply focus:border-charcoal outline-none;
-
-  &.form-control-error {
-    @apply focus:border-red;
-  }
-}
-
-textarea {
-  @apply py-2 resize-none;
-}
-
-// SNACKBAR
-.mdc-snackbar {
-  &__surface {
-    @apply p-0 rounded-md shadow-none #{!important};
-  }
-
-  &__label {
-    @apply p-0 #{!important};
-  }
-}
-
-// DIALOG
-.mat-mdc-dialog-container {
-  .mdc-dialog__title {
-    @apply font-main text-lg font-bold text-charcoal px-6 py-3 #{!important};
-
-    &::before {
-      @apply hidden;
-    }
-  }
-
-  .mdc-dialog__surface {
-    @apply rounded-md shadow-none #{!important};
-  }
-
-  app-base-modal {
-    .mat-mdc-dialog-actions {
-      @apply flex items-center justify-end gap-x-4 #{!important};
-    }
-  }
-}
-
-// SCROLLER
-.cdk-virtual-scroll-content-wrapper {
-  @apply w-full #{!important};
-}
-
-// VIEW TRANSITIONS
-:root {
-  view-transition-name: none;
-}
-
-.animated-route {
-  view-transition-name: animated-route;
-}
-
-::view-transition-new(animated-route),
-::view-transition-old(animated-route) {
-  animation-duration: 250ms;
-  animation-timing-function: ease-out;
-  animation-direction: normal;
-}
-
-::view-transition-old(animated-route) {
-  animation-name: scale-out;
-}
-
-::view-transition-new(animated-route) {
-  animation-name: slide-in;
-  mix-blend-mode: normal;
-}
-
-@keyframes scale-out {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-
-@keyframes slide-in {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
+@import './shared-styles/tailwind';
+@import './shared-styles/custom-styles';
+@import './shared-styles/font';
+@import './shared-styles/general';
+@import './shared-styles/form-controls';
+@import './shared-styles/ng-material-custom';
+@import './shared-styles/view-transition';
