--- a/src/app/modules/design-system/components/button/button.component.scss
+++ b/src/app/modules/design-system/components/button/button.component.scss
@@ -1,36 +1,13 @@
+@import './button-size';
+@import './button-active-state';
+@import './button-color';
+@import './button-current-color-mixin';
+
 :host {
   @media (hover: hover) {
-    transition-duration: 0.1s;
-    transition-timing-function: linear;
-    transition-property: background-color, color;
-  }
-
-  @mixin clickEffectOnMobile($bg-color) {
-    @media (hover: none) {
-      &:active {
-        @apply #{$bg-color};
-      }
-    }
-  }
-
-  &.use-current-color {
-    color: currentColor;
-
-    svg-icon {
-      color: currentColor;
-    }
-
-    @media (hover: hover) {
-      &:hover {
-        background-color: color-mix(in srgb, currentColor 15%, transparent);
-      }
-    }
-
-    @media (hover: none) {
-      &:active {
-        background-color: color-mix(in srgb, currentColor 15%, transparent);
-      }
-    }
+    transition:
+      background-color 0.15s ease-in-out,
+      color 0.15s ease-in-out;
   }
 
   // STATES
@@ -40,175 +17,16 @@
     @apply cursor-default pointer-events-none;
   }
 
-  // SIZES X
-  &.tiny-x {
-    @apply w-7 min-w-7;
-  }
-
-  &.small-x {
-    @apply w-8 min-w-8;
-  }
-
-  &.medium-x {
-    @apply w-9 min-w-9;
-  }
-
-  &.px100-x {
-    @apply w-25 min-w-25;
-  }
-
-  &.big-x {
-    @apply w-40 min-w-40;
-  }
-
-  &.large-x {
-    @apply w-60 min-w-60;
-  }
-
-  &.full-x {
-    @apply w-full;
-  }
-
-  &.auto-x {
-    @apply w-auto;
-  }
-
-  // SIZES Y
-  &.tiny-y {
-    @apply h-7 min-h-7;
-  }
-
-  &.small-y {
-    @apply h-8 min-h-8;
-  }
-
-  &.medium-y {
-    @apply h-9 min-h-9;
-  }
-
-  &.auto-y {
-    @apply h-auto;
-  }
+  // USE CURRENT COLOR
+  @include use-current-color;
 
   // COLORS
-  &.charcoal {
-    @apply bg-charcoal text-white;
-
-    &.disabled {
-      @apply bg-grey;
-    }
-
-    svg-icon {
-      @apply text-white;
-    }
-
-    @media (hover: hover) {
-      @apply hover:bg-blue;
-    }
-
-    &.mobile-click-effect {
-      @include clickEffectOnMobile(bg-blue);
-    }
-  }
-
-  &.green {
-    @apply bg-dark-green text-white;
-
-    &.disabled {
-      @apply bg-grey;
-    }
-
-    svg-icon {
-      @apply text-white;
-    }
-
-    @media (hover: hover) {
-      @apply hover:bg-hover-green;
-    }
-
-    &.mobile-click-effect {
-      @include clickEffectOnMobile(bg-hover-green);
-    }
-  }
-
-  &.active-navigation-item {
-    @apply bg-transparent text-green;
-
-    svg-icon {
-      @apply text-green;
-    }
-
-    @media (hover: hover) {
-      @apply hover:bg-hover-white;
-    }
-
-    &.mobile-click-effect {
-      @include clickEffectOnMobile(bg-hover-white);
-    }
-  }
-
-  &.transparent-light {
-    @apply bg-transparent text-white;
-
-    svg-icon {
-      @apply text-white;
-    }
-
-    @media (hover: hover) {
-      @apply hover:bg-hover-white;
-    }
-
-    &.mobile-click-effect {
-      @include clickEffectOnMobile(bg-hover-white);
-    }
-  }
-
-  &.transparent-dark {
-    @apply bg-transparent  text-charcoal;
-
-    &.disabled {
-      @apply text-grey;
-
-      svg-icon {
-        @apply text-grey;
-      }
-    }
-
-    svg-icon {
-      @apply text-charcoal;
-    }
-
-    @media (hover: hover) {
-      @apply hover:bg-hover-black;
-    }
-
-    &.mobile-click-effect {
-      @include clickEffectOnMobile(bg-hover-black);
-    }
-  }
+  @include button-color;
 
   // ACTIVE STATE
-  &.active-green {
-    @apply bg-dark-green text-white;
+  @include button-active-state;
 
-    svg-icon {
-      @apply text-white;
-    }
-  }
-
-  &.active-charcoal {
-    @apply bg-charcoal text-white;
-
-    svg-icon {
-      @apply text-white;
-    }
-  }
-
-  &.active-transparent-dark {
-    @apply bg-hover-black text-charcoal;
-
-    svg-icon {
-      @apply text-charcoal;
-    }
-  }
+  // SIZES
+  @include button-size(w);
+  @include button-size(h);
 }
