modals to bottom on mobile, removed bottom radius for modals on mobile

--- a/src/app/modules/design-system/components/confirmation-modal/confirmation-modal.component.html
+++ b/src/app/modules/design-system/components/confirmation-modal/confirmation-modal.component.html
@@ -1,4 +1,5 @@
 <app-base-modal
+  class="confirmation-modal"
   [titleTranslationKey]="buildTranslationKey('title')"
   [shouldDisplayCloseButton]="false"
   [footerTemplate]="footer"
