added max values for accounts

--- a/src/app/modules/dashboard/modules/categories/components/category-value-modal/category-value-modal.component.html
+++ b/src/app/modules/dashboard/modules/categories/components/category-value-modal/category-value-modal.component.html
@@ -21,6 +21,7 @@
       [label]="'dashboard.categoryValueModal.valueToAddTitle' | translate"
       [isRequired]="true"
       [minValue]="1"
+      [maxValue]="maxValue"
       [type]="'number'"
       [formControlName]="formFieldsEnum.ValueToAdd"
       [isDisabled]="!accoundChoosed"
