--- a/src/app/modules/dashboard/modules/info-cards/components/move-money-between-accounts-modal/move-money-between-accounts-modal.component.html
+++ b/src/app/modules/dashboard/modules/info-cards/components/move-money-between-accounts-modal/move-money-between-accounts-modal.component.html
@@ -32,6 +32,7 @@
       [label]="'dashboard.moneyMovementBetweenAccountsModal.valueToMoveTitle' | translate"
       [isRequired]="true"
       [minValue]="1"
+      [maxValue]="maxValue"
       [type]="'number'"
       [formControlName]="formFieldsEnum.ValueToMove"
       [prefix]="currencySymbolForValueField"
