--- a/src/app/modules/design-system/components/form-controls/custom-input/custom-input.component.html
+++ b/src/app/modules/design-system/components/form-controls/custom-input/custom-input.component.html
@@ -4,7 +4,9 @@
 
 <div class="w-full relative">
   @if (prefix) {
-    <span class="absolute top-1/2 left-5 text-lg text-charcoal -translate-y-1/2 font-bold">
+    <span
+      class="font-main absolute top-1/2 left-5 text-lg text-charcoal -translate-y-1/2 font-bold"
+    >
       {{ prefix }}
     </span>
   }
@@ -40,6 +42,10 @@
 
     @if (hasMinValueError) {
       <control-error>{{ 'formErrors.minValue' | translate: { minValue } }}</control-error>
+    }
+
+    @if (hasMaxValueError) {
+      <control-error>{{ 'formErrors.maxValue' | translate: { maxValue } }}</control-error>
     }
 
     @if (hasSameValueError) {
