--- a/src/app/modules/dashboard/modules/activity-log/components/account-value-edit-record/account-value-edit-record.component.html
+++ b/src/app/modules/dashboard/modules/activity-log/components/account-value-edit-record/account-value-edit-record.component.html
@@ -5,12 +5,12 @@
   [loading]="this.isRecordRemoving$ | async"
   (remove)="removeHandler()"
 >
-  <span class="flex justify-between flex-wrap">
+  <span class="flex flex-col">
     <span class="font-main text-charcoal text-base">
       {{ record.accountName }}
     </span>
 
-    <span class="font-main font-bold text-blue">
+    <span class="font-main font-bold text-blue text-xs">
       {{ record.oldValue | currencySymbol }}&nbsp;&rarr;&nbsp;{{ record.newValue | currencySymbol }}
     </span>
   </span>
