--- a/src/app/modules/auth/components/auth-page/auth-page.component.html
+++ b/src/app/modules/auth/components/auth-page/auth-page.component.html
@@ -1,4 +1,4 @@
-<svg-icon class="h-25" [iconName]="'app-logo'" [size]="'large'"></svg-icon>
+<svg-icon class="h-25" [iconName]="'app-logo'" [iconSize]="'large'"></svg-icon>
 
 <app-button
   [iconName]="'google'"
