--- a/src/app/modules/dashboard/modules/info-cards/components/info-cards/full-balance-info-card/full-balance-info-card.component.html
+++ b/src/app/modules/dashboard/modules/info-cards/components/info-cards/full-balance-info-card/full-balance-info-card.component.html
@@ -1,5 +1,6 @@
 <app-info-card
-  [iconBgClass]="'bg-light-blue'"
+  [style.background-color]="'text-white' | classToHexColor"
+  [style.color]="'text-blue' | classToHexColor"
   [iconName]="'equal-sign'"
   [primaryText]="fullBalance$ | async | currencySymbol"
   [secondaryText]="buildTranslationKey('title') | translate"
