--- a/src/app/modules/design-system/components/info-icon/info-icon.component.html
+++ b/src/app/modules/design-system/components/info-icon/info-icon.component.html
@@ -5,5 +5,5 @@
   [tooltipText]="stringTooltip"
   [tooltipTemplate]="templateTooltip"
   [iconName]="icon"
-  [size]="size"
+  [iconSize]="size"
 ></svg-icon>
