changed font color

--- a/src/app/modules/dashboard/modules/activity-log/components/move-money-between-accounts-record/move-money-between-accounts-record.component.html
+++ b/src/app/modules/dashboard/modules/activity-log/components/move-money-between-accounts-record/move-money-between-accounts-record.component.html
@@ -14,7 +14,7 @@
       {{ record.fromAccount.name }} &rarr; {{ record.toAccount.name }}
     </span>
 
-    <span class="font-bold">
+    <span class="font-bold text-blue">
       {{ record.fromAccountValue }} {{ record.fromAccount.currency.symbol }}
       &rarr;
       {{ record.toAccountValue }} {{ record.toAccount.currency.symbol }}
