--- a/src/app/modules/dashboard/modules/activity-log/components/account-management-record/account-management-record.component.html
+++ b/src/app/modules/dashboard/modules/activity-log/components/account-management-record/account-management-record.component.html
@@ -10,7 +10,8 @@
         *ngTemplateOutlet="
           template;
           context: {
-            content: buildTranslationKey('accountAdded') | translate: { accountName: record.accountName }
+            content:
+              buildTranslationKey('accountAdded') | translate: { accountName: record.accountName }
           }
         "
       ></ng-container>
@@ -21,7 +22,8 @@
         *ngTemplateOutlet="
           template;
           context: {
-            content: buildTranslationKey('accountRemoved') | translate: { accountName: record.accountName }
+            content:
+              buildTranslationKey('accountRemoved') | translate: { accountName: record.accountName }
           }
         "
       ></ng-container>
