--- a/src/app/modules/dashboard/modules/categories/components/category-item/category-item.component.html
+++ b/src/app/modules/dashboard/modules/categories/components/category-item/category-item.component.html
@@ -18,7 +18,13 @@
   </div>
 
   <div class="flex items-center gap-x-2">
-    <span class="font-main font-bold text-charcoal text-base"> {{ category?.value | currencySymbol }}</span>
-    <app-menu [menuActions]="menuActions" [loading]="isCategoryRemoving" (click)="$event.stopPropagation()"></app-menu>
+    <span class="font-main font-bold text-charcoal text-base">
+      {{ category?.value | currencySymbol }}</span
+    >
+    <app-menu
+      [menuActions]="menuActions"
+      [loading]="isCategoryRemoving"
+      (click)="$event.stopPropagation()"
+    ></app-menu>
   </div>
 </ng-container>
