--- a/src/app/modules/statistics/components/monthly-statistics/monthly-statistics.component.html
+++ b/src/app/modules/statistics/components/monthly-statistics/monthly-statistics.component.html
@@ -1,7 +1,16 @@
-<app-page-header class="text-xl" [title]="buildTranslationKey('title') | translate"></app-page-header>
+<app-page-header
+  class="text-xl"
+  [title]="buildTranslationKey('title') | translate"
+></app-page-header>
 
 <div class="w-full flex justify-center items-center overflow-hidden">
-  <canvas baseChart #chart="base-chart" [type]="'bar'" [data]="chartData$ | async" [options]="chartOptions"></canvas>
+  <canvas
+    baseChart
+    #chart="base-chart"
+    [type]="'bar'"
+    [data]="chartData$ | async"
+    [options]="chartOptions"
+  ></canvas>
 </div>
 
 <div class="flex justify-center gap-2">
