--- a/src/app/modules/statistics/statistics.component.html
+++ b/src/app/modules/statistics/statistics.component.html
@@ -1,3 +1,6 @@
-<app-page-header class="text-2xl" [title]="buildTranslationKey('pageTitle') | translate"></app-page-header>
+<app-page-header
+  class="text-2xl"
+  [title]="buildTranslationKey('pageTitle') | translate"
+></app-page-header>
 
 <app-monthly-statistics></app-monthly-statistics>
