--- a/src/app/modules/design-system/components/generic-activity-log-record/generic-activity-log-record.component.html
+++ b/src/app/modules/design-system/components/generic-activity-log-record/generic-activity-log-record.component.html
@@ -1,9 +1,4 @@
-<svg-icon
-  class="text-charcoal bg-light-blue"
-  [iconName]="icon"
-  [iconSize]="'small'"
-  [bgSize]="'small'"
-></svg-icon>
+<svg-icon class="text-charcoal bg-light-blue" [iconName]="icon" [bgSize]="'small'"></svg-icon>
 
 <div class="flex flex-col gap-y-0.5 flex-1 overflow-hidden">
   <span class="font-main text-charcoal text-base">
